--- a/style.css
+++ b/style.css
@@ -12,7 +12,12 @@ body{
     width: 90%;
     margin: 0 auto;
 }
-
+a{
+    text-decoration: none;
+}
+ul li{
+    list-style: none;
+}
 /* Header Section Style  */
 
 header{
@@ -32,12 +37,13 @@ header{
     font-weight: 700;
     color: #131313;
 }
-.header-top-area > nav > ul{
+span.highlight{
+    color: rgba(255, 144, 14, 1);
+}
+.header-top-area > nav, nav > ul{
     display: flex;
-    list-style: none;
 }
 .header-top-area > nav > ul > li > a{
-    text-decoration: none;
     padding-left: 30px;
     color: #424242;
     transition: .5s;
@@ -45,6 +51,7 @@ header{
 .header-top-area > nav > ul > li > a:hover{
     color: rgba(255, 144, 14, 1);
 }
+
 /* header-banner-area style  */
 .header-content{
     text-align: center;
@@ -57,7 +64,7 @@ header{
 }
 .header-content > p{
     padding: 30px 0;
-    width: 600px;
+    width: 50%;
     line-height: 30px;
     margin: 0 auto;
     color: #727272;
@@ -81,3 +88,52 @@ img{
     width: 100%;
     padding-bottom: 30px;
 }
+
+
+/*======================
+Style For Small Device 
+========================*/
+
+/* Header Section */
+@media screen and (max-width: 600px) {
+    .header-top-area{
+        display: flex;
+        flex-direction: column;
+        padding-top: 50px;
+        margin-bottom: 70px;
+    }
+    .header-top-area > .logo > a{
+        text-decoration: none;
+        font-size: 35px;
+        font-weight: 700;
+        color: #131313;
+        display: block;
+        margin-bottom: 30px;
+    }
+   
+    .header-top-area > nav, nav > ul{
+        display: flex;
+        flex-direction: column;
+    }
+    .header-top-area > nav > ul > li {
+        padding: 10px 0;
+        color: #424242;
+        transition: .5s;
+        text-align: center;
+    }
+  
+    /* Header Content */
+    .header-content > h1{
+        color: #131313;
+        font-size: 40px;
+        font-weight: 700;
+    }
+    .header-content > p{
+        padding: 30px 0;
+        width: 80%;
+        line-height: 30px;
+        margin: 0 auto;
+        color: #727272;
+    }
+  }
+  
