--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ span.highlight{
 .header-top-area > nav > ul > li > a{
     padding-left: 30px;
     color: #424242;
-    transition: .5s;
+    transition: .2s;
 }
 .header-top-area > nav > ul > li > a:hover{
     color: rgba(255, 144, 14, 1);
@@ -129,9 +129,81 @@ img{
     display: none;
 }
 
+/* Experience Features Section Style */
 
+.experience-features{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+.experience-features-content{
+    width: 45%;
+}
 
+hr{
+    width: 6px;
+    height: 100px;
+    background-color: rgba(255, 144, 14, 1);
+    border: none;
+    outline: none;
+    margin-right: 20px;
+}
+.experience-features-content > h1{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 30px;
+}
+.experience-features-content > p{
+    margin: 20px;
+}
+.experience-content-box{
+    box-shadow: 0px 4px 7px 0px rgba(0,0,0,0.1);
+    margin: 20px 0;
+    padding: 20px 30px;
+}
+.experience-content-box > h2{
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+.experience-content-box > p{
+    line-height: 26px;
+}
 
+.experience-features-image{
+    width: 45%;   
+    position: relative;
+}
+.experience-features-image > img{
+    width: 100%;
+}
+a.experience-btn{
+    display: inline-block;
+    font-size: 40px;   
+    font-weight: 700;
+    background-color: rgba(255, 144, 14, 1);
+    text-align: center;
+    color: white;
+    padding: 20px;
+    line-height: 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 5px solid rgba(255, 144, 14, 1);
+    transition: .5s;
+    position: absolute;
+    bottom: 100px;
+    left: -50px;
+}
+a.experience-btn > span{
+    font-size: 16px;
+    font-weight: 400;
+}
+a.experience-btn:hover{
+    background-color: rgba(255, 144, 14, 0.2);
+    color: rgba(255, 144, 14, 1);
+}
 /*======================
 Style For Small Device 
 ========================*/
