--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ hr{
 .experience-content-box > h2{
     margin-bottom: 10px;
     font-size: 20px;
+    color: rgba(255, 144, 14, 1);
 }
 .experience-content-box > p{
     line-height: 26px;
@@ -283,5 +284,34 @@ Style For Small Device
     .features-content > p{
         width: 100%;
     }
+
+    /* Experience Features Section */
+
+.experience-features-content > h1{
+        font-size: 30px;
+ }
+ hr{
+    height: 80px;
+}
+.experience-features{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+.experience-features-content, .experience-features-image{
+    width: 100%;
+}
+a.experience-btn{
+    font-size: 30px;   
+    position: absolute;
+    bottom: 0px;
+    left: 25%;
+    
+}
+
+
+
+
+
   }
   
