--- a/style.css
+++ b/style.css
@@ -248,7 +248,28 @@ a.experience-btn:hover{
     color: #727272;
 }
 
+/* Sponspors Section Style */
+.sponspors{
+    margin-bottom: 100px;
+    text-align: center;
+}
+.sponspors > h1{
+    font-size: 45px;
+}
+.sponspors > p{
+    color: #727272;
+    margin: 50px auto;
+    width: 50%;
 
+}
+.sponspors-logo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.sponspors-logo > img{
+    width: 100px;
+}
 
 
 
