--- a/style.css
+++ b/style.css
@@ -272,6 +272,33 @@ a.experience-btn:hover{
     margin-bottom: 50px;
 }
 
+/* subscription section  */
+.subscription{
+    background-color: rgba(255, 144, 14, 0.3);
+    margin-bottom: 100px;
+    padding: 50px 0;
+    text-align: center;
+}
+.subscribe-box > h1{
+    font-size: 45px;
+    color:#424242;
+    margin-bottom: 30px;
+}
+.subscribe-box > input[type=text] {
+    background-color: white;
+    outline: none;
+    border: none;
+    color:#424242;
+    width: 50%;
+    height: 48px;
+    padding: 0 20px;
+    border-radius: 5px;
+    font-size: 18px;
+  }
+  ::placeholder{
+    font-size: 18px;
+    color: rgba(255, 144, 14, 0.5);
+  }
 
 
 
@@ -405,6 +432,11 @@ a.experience-btn{
     flex-direction: column;
 }
 
+/* Subscription Section  */
+.subscribe-box > h1{
+    font-size: 30px;
+}
 
-  }
+
+}
   
